--- a/exploreCalifornia/index.html
+++ b/exploreCalifornia/index.html
@@ -122,4 +122,27 @@
       </div>
     </div>
   </body>
+  <body>
+    <header>
+        <h1>Magic Stuff</h1>
+    </header> 
+<!-- start of new content -->
+    <div class="container">
+
+       <main>
+        </main>
+
+        <aside>
+       <h2>About Me</h2>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, debitis earum molestias veniam suscipit aliquam totam exercitationem tempore neque vitae. Minima, corporis pariatur facere at quo porro beatae similique! Odit.</p>
+         </aside>
+
+    </div>
+<!-- end of new content -->
+
+    <footer>
+   CS410 Spring 2020
+    </footer>
+
+</body>
 </html>
